# rail_pose_estimation

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: detector.launch
msg/: Keypoints.msg
rail_pose_estimation/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_pose_estimation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_pose_estimation_msgs/msg/: Keypoints.msg  Poses.msg
rail_pose_estimator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rail_pose_estimator/launch/: detector.launch
rail_pose_estimator/scripts/: cpm_detector_node.py
scripts/: cpm_detector_node.py  pose_estimation.py
