<?xml version="1.0"?>
<package format="2">
  <name>rail_pose_estimation</name>
  <version>1.0.1</version>
  <description>Pose Estimation methods used in the RAIL Lab</description>

  <author email="banerjs.sid@gmail.com">Siddhartha Banerjee</author>
  <author email="andrew.silva@gatech.edu">Andrew Silva</author>
  <maintainer email="banerjs.sid@gmail.com">Siddhartha Banerjee</maintainer>
  <maintainer email="andrew.silva@gatech.edu">Andrew Silva</maintainer>

  <license>MIT</license>

  <url type="website">http://ros.org/wiki/rail_pose_estimation</url>
  <url type="bugtracker">https://github.com/GT-RAIL/rail_pose_estimation/issues</url>
  <url type="repository">https://github.com/GT-RAIL/rail_pose_estimation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rail_pose_estimator</exec_depend>
  <exec_depend>rail_pose_estimation_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
