<package format="2">
  <name>rail_pose_estimation_msgs</name>
  <version>1.0.0</version>
  <description>
    This package provides multi-person pose estimation via Caffe.
  </description>
  <author email="banerjs.sid@gmail.com">Siddhartha Banerjee</author>
  <author email="andrew.silva@gatech.edu">Andrew Silva</author>
  <maintainer email="banerjs.sid@gmail.com">Siddhartha Banerjee</maintainer>
  <maintainer email="andrew.silva@gatech.edu">Andrew Silva</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
